optimize pub and sub function , add marker from  server

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,8 @@
     <string name="style_json"></string>
     <string name="channel_name">ProxyLoc</string>
 
+    <string name="mqtt_host">tcp://mr2aqty0xnech1.messaging.solace.cloud:20966</string>
+    <string name="mqtt_pass">usa9boldpiapdjqr9b7gii14h</string>
+    <string name="mqtt_user">solace-cloud-client</string>
+
 </resources>
