add wifi  service

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="mqtt_user">solace-cloud-client</string>
 
     <string name="mqttPubTopic">proxylox/out/coords</string>
-    <string name="link">https://proxylox.osc-fr1.scalingo.com</string>
+    <string name="link">https://proxylox.osc-fr1.scalingo.io/</string>
 
 
     <string-array name="planets_array">
